<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.synetta.template</groupId>
  <artifactId>synetta-template</artifactId>
  <packaging>jar</packaging>
  <version>1.0</version>
  <name>Synetta Template</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <javafx.version>21</javafx.version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
    <javafx.mainClass>com.synetta.template.App</javafx.mainClass>

    <maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

    <javet.version>3.1.2</javet.version>
    <javenode.version>0.7.0</javenode.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>com.caoccao.javet</groupId>
      <artifactId>javenode</artifactId>
      <version>${javenode.version}</version>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>windows</id>
      <activation>
        <os>
          <family>windows</family>
          <arch>x86</arch>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.caoccao.javet</groupId>
          <artifactId>javet</artifactId>
          <version>${javet.version}</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>unix</family>
          <arch>x86</arch>
        </os>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.caoccao.javet</groupId>
          <artifactId>javet</artifactId>
          <version>${javet.version}</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>linux-arm64</id>
      <activation>
        <os>
          <family>unix</family>
          <arch>arm64</arch>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.caoccao.javet</groupId>
          <artifactId>javet-linux-arm64</artifactId>
          <version>${javet.version}</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>macos</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>com.caoccao.javet</groupId>
          <artifactId>javet-macos</artifactId>
          <version>${javet.version}</version>
        </dependency>
      </dependencies>
    </profile>
  </profiles>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.maven.plugin.version}</version>
        <configuration>
          <mainClass>${javafx.mainClass}</mainClass>
          <options>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.collections=ALL-UNNAMED</option>
          </options>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>